src/app/components/modules/sticky-sidebar/presenters/sticky-sidebar-small-pres/sticky-sidebar-small-pres.component.scss
@import 'utils';

$tab-min-width: 72px !default;

:host {
  left: 0;
  height: 100%;
  position: absolute;
  width: 100vw;
}

.sidebar-container {
  background: $white;
  position: sticky;
  top: 0;
  z-index: 2;

  ::ng-deep {
    .profile-pic {
      @include profile-pic($profile-pic-size-small);
    }
  }
}

.sidebar-row-1 {
  background: $bg-base;
}

.mat-tab-nav-bar {
  overflow-x: scroll;

  ::ng-deep .mat-tab-links {
    justify-content: center;
  }
}

.mat-tab-link {
  min-width: $tab-min-width;
}

.active-link {
  background: $gray-lighter;
}

